# xirr_lite

./: LICENSE  Pipfile  pyproject.toml  readme.md  setup.cfg  setup.py
tests/: test_main.py
xirr_lite/: __init__.py  alt.py  main.py  newton.py
