[project]
name = "xirr"
version = "0.1.0"
description = ""
authors = [
    {name = "Patrick Shechet", email = "patrick.shechet@gmail.com"},
]
dependencies = []
requires-python = ">=3.10"
readme = "readme.md"
license = {text = "BSD-3-clause"}
[project.optional-dependencies]

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"

[tool]
[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "black>=22.12.0",
    "numpy>=1.24.1",
]

[tool.pdm.scripts]
test = "python -m unittest discover -v"